# loop-task

./: .dockerignore  README.md  REQUIREMENTS.md  REQUIREMENTS_VALIDATION.md  pyproject.toml
data/: evaluation_dataset.json
notebook2/: 00_explore_data.ipynb  01_data_ingestion.ipynb  02_test_chatbot.ipynb  03_reset_database.ipynb  column_mappings.json  schema_info.json
