[project]
name = "loop-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.14.3",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.4",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.6",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "sqlparse>=0.5.5",
]
